# emblib

./: .gitmodules  CMakeLists.txt  CodeStyle.md  README.md
cmake/: add_submodule.cmake  addsubmodule.cmake  include_prefix.cmake
drivers/: CMakeLists.txt
drivers/eigen/: CMakeLists.txt
drivers/freertos/: CMakeLists.txt
drivers/freertos/backend/: mutex.hpp  queue.hpp  semaphore.hpp  task.hpp
drivers/freertos/include/: chrono.hpp  mutex.hpp  queue.hpp  scheduler.hpp  semaphore.hpp  task.hpp
drivers/freertos/test/: hooks.c  mutex_test.cpp  queue_test.cpp  semaphore_test.cpp
drivers/io/include/emblib/io/std/: fstream.hpp  iostream.hpp
drivers/io/net/: CMakeLists.txt
drivers/io/net/include/: udp_stream.hpp
drivers/io/net/src/: udp_stream.cpp
drivers/io/std/: CMakeLists.txt
drivers/io/std/include/: fstream.hpp  iostream.hpp
drivers/math/: README.md
drivers/math/eigen/: CMakeLists.txt
drivers/math/eigen/include/details/: matrix_impl.hpp
drivers/posix/: CMakeLists.txt
drivers/posix/include/: sock_dev.hpp  udp_dev.hpp
drivers/posix/src/: sock_dev.cpp  udp_dev.cpp
drivers/posix/test/: udp_dev.test.cpp
drivers/rtos/freertos/: CMakeLists.txt
drivers/rtos/freertos/include/details/: chrono_impl.hpp  chrono_native.hpp  mutex_impl.hpp  mutex_native.hpp  queue_impl.hpp  queue_native.hpp  scheduler_impl.hpp  semaphore_impl.hpp  task_impl.hpp  task_native.hpp
drivers/rtos/freertos/include/emblib/rtos/freertos/: chrono.hpp  queue.hpp  scheduler.hpp  semaphore.hpp  task.hpp
impl/math/eigen/: CMakeLists.txt
impl/math/eigen/include/details/: matrix_impl.hpp  matrix_native.hpp
impl/rtos/freertos/: CMakeLists.txt
impl/rtos/freertos/include/details/: mutex_impl.hpp  semaphore_native.hpp  task_impl.hpp
impl/rtos/freertos/include/emblib/rtos/freertos/: queue.hpp  semaphore.hpp  task.hpp
include/: emblib_config_template.hpp
include/emblib/devices/actuators/: motor.hpp  servo.hpp
include/emblib/devices/io/: gpio_pin.hpp  i2c_bus.hpp  i2c_dev.hpp  uart.hpp
include/emblib/devices/sensors/: accelerometer.hpp  gyroscope.hpp  sensor.hpp  sensornd.hpp
include/emblib/driver/: accelerometer.hpp  char_dev.hpp  gyroscope.hpp  i2c_bus.hpp  motor.hpp  sensor3d.hpp
include/emblib/driver/actuator/: motor.hpp  servo.hpp
include/emblib/driver/io/: char_dev.hpp  gpio_pin.hpp  i2c_bus.hpp  i2c_dev.hpp  i2c_mux.hpp  io_dev.hpp  uart.hpp
include/emblib/driver/sensor/: accelerometer.hpp  gyroscope.hpp  sensor.hpp  sensor3d.hpp  sensornd.hpp
include/emblib/dsp/: iir.hpp  kalman.hpp  pid.hpp
include/emblib/io/: i2c.hpp  idev.hpp  iodef.hpp  iodev.hpp  iostream.hpp  istream.hpp  locked_iostream.hpp  odev.hpp  ostream.hpp  types.hpp
include/emblib/lockfree/: allocator.hpp  spmc_queue.hpp  spsc_queue.hpp
include/emblib/math/: matrix.hpp  matrix_views.hpp  ops.hpp  quaternion.hpp  vector.hpp
include/emblib/math/details/: matrix_impl.hpp  matrix_native.hpp
include/emblib/math/eigen/: matrix_inline.hpp
include/emblib/rtos/: chrono.hpp  lfalloc.hpp  lock.hpp  mutex.hpp  queue.hpp  scheduler.hpp  semaphore.hpp  spinlock.hpp  task.hpp
include/emblib/rtos/details/: mutex_impl.hpp  mutex_native.hpp  queue_impl.hpp  queue_native.hpp  task_impl.hpp  task_native.hpp
include/emblib/rtos/freertos/: queue.hpp  semaphore.hpp  task.hpp
include/emblib/rtos/freertos/details/: mutex_inline.hpp  queue_impl.hpp  queue_inline.hpp  task_impl.hpp  task_inline.hpp
include/emblib/units/: angle.hpp  length.hpp  rotation.hpp  si.hpp  speed.hpp  time.hpp  units.hpp
include/emblib/utils/: chrono.hpp  logger.hpp  units.hpp
src/: test.cpp
test/: CMakeLists.txt
test/dsp/: kalman.test.cpp
test/io/: iodev.test.cpp  iostream.test.cpp
test/lockfree/: allocator.test.cpp  spmc_queue.test.cpp  spsc_queue.test.cpp
test/math/: matrix.test.cpp
test/rtos/: lfalloc.test.cpp  spinlock.test.cpp
